<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_COM_Buffers" Id="{a8441f26-f9f8-4fbc-842d-41b6657e3ba7}">
    <Declaration><![CDATA[VAR_GLOBAL
    // M1K3
    Serial_RXBuffer_M1K3 : ComBuffer;
    Serial_TXBuffer_M1K3 : ComBuffer;

    // M2K3
    Serial_RXBuffer_M2K3 : ComBuffer;
    Serial_TXBuffer_M2K3 : ComBuffer;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>