<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M2K3" Id="{b4287d9d-45c2-46f6-b4bf-11d58d75255d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // Pitch Mechanism
    {attribute 'TcLinkTo' := '.diEncCnt:=TIIB[EL5042_M2K3_Pitch]^FB Inputs Channel 1^Position'}
    M2K3_Pitch : HOMS_PitchMechanism := (ReqPosLimHi := 58900,
                                         ReqPosLimLo := 57500,
                                         diEncPosLimHi := 10602000,
                                         diEncPosLimLo := 10350000);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>